<resources>
    <string name="app_name">游彩</string>
    <string name="mine">我的</string>
    <string name="mine_title">个人中心</string>
    <string name="lottery">购彩</string>
    <string name="discovery">发现</string>
    <string name="result">开奖</string>
    <string name="result_title">开奖信息</string>
    <string name="result_notify_title">开奖推送</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_login">登录</string>
    <string name="btn_next_step">下一步</string>
    <string name="btn_logout">退出登录</string>
    <string name="btn_register_done">完成注册</string>
    <string name="btn_order">投注</string>
    <string name="btn_recharge">前往支付</string>
    <string name="btn_update">立即修改</string>
    <string name="btn_submit">提交</string>
    <string name="btn_confirm_binding">确认修改</string>
    <string name="btn_update_mobile">修改号码</string>
    <string name="Your_Sure_Back">您确定要退出登录吗?</string>
    <string name="email">邮箱</string>
    <string name="pwd">密码</string>
    <string name="register_phone">手机注册</string>
    <string name="register_email">邮箱注册</string>
    <string name="login_phone">手机登录</string>
    <string name="login_email">邮箱登录</string>
    <string name="please_input_pwd">请输入注册密码</string>
    <string name="please_input_email">请输入注册邮箱</string>
    <string name="please_input_bind_email">请输入要绑定的邮箱</string>
    <string name="please_input_phone">请输入注册手机号</string>
    <string name="sure">确定</string>
    <string name="register">注册</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="login">登录</string>
    <string name="verify_code">验证码</string>
    <string name="please_input_verify_code">请输入验证码</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="email_Send_Successful">已发送邮箱,请查阅</string>
    <string name="btn_get_code_again">重新获取</string>
    <string name="btn_get_code_with_time">重新获取(%s)</string>
    <string name="passwordRule">密码由6~12位数字和字母组成</string>
    <string name="select_country_zone">选择国家和地区</string>
    <string name="tips">提示</string>
    <string name="tips_third_platform_login">第三方登录</string>
    <string name="tips_select_min_red_ball">至少选择6个红球</string>
    <string name="tips_select_min_blue_ball">至少选择1个蓝球</string>
    <string name="tips_net_wrong">网络异常，请检查网络</string>
    <string name="tips_skipping">正在跳转</string>
    <string name="tips_agree_service">我已满18周岁并同意</string>
    <string name="tips_please_read_service">请先勾选同意《用户服务和隐私条款》</string>
    <string name="tips_loading">正在加载</string>
    <string name="tips_loading_order_again_buy">生成本单号码中</string>
    <string name="tips_bind_email">为保证您及时收到中奖信息，请尽快绑定邮箱</string>
    <string name="bind_email">绑定邮箱</string>
    <string name="bind_phone">绑定手机号</string>
    <string name="tips_response_code_502">服务器错误502</string>
    <string name="tips_response_code_404">服务器错误404</string>
    <string name="tips_response_code_400">参数或者url不符合要求</string>
    <string name="tips_response_code_none">服务器错误</string>
    <string name="tips_request_fail">请求失败</string>
    <string name="tips_request_stolen">登录失效</string>
    <string name="tips_request_token_lost">token失效，请重新登录</string>
    <string name="tips_request_code207">您的账户被冻结,请联系运营商</string>
    <string name="tips_request_code208">渠道商被冻结</string>
    <string name="tips_request_ok">请求成功</string>
    <string name="tips_upload_doing">正在上传</string>
    <string name="tips_update_fail">更新失败</string>
    <string name="tips_update_ok">更新成功</string>
    <string name="tips_sure_to_logout">确认要退出App?</string>
    <string name="tips_tip">温馨提示</string>
    <string name="tips_recharge">如充值未能及时到账，请耐心等待。</string>
    <string name="tips_no_record_history">暂无交易记录\n赶紧去投注吧</string>
    <string name="tips_no_buy_history">暂无购彩记录\n赶紧去投注吧</string>
    <string name="tips_identify">中了大奖要凭身份领取哦，来花一分钟填写一下吧！</string>
    <string name="tips_no_data">暂无相关内容</string>
    <string name="tips_no_login">你还没登录，现在去登录吗?</string>
    <string name="tips_win_message">您有新的中奖通知,登录后可查看站内信息，现在去登录吗?</string>
    <string name="tips_no_identify">你还没绑定身份信息，现在去绑定吗?</string>
    <string name="tips_realname_null">请输入真实姓名</string>
    <string name="tips_id_null">请输入身份证号</string>
    <string name="tips_nickname_null">请输入昵称</string>
    <string name="tips_delete_fail">删除失败</string>
    <string name="tips_setting">正在设置</string>
    <string name="tips_identify_tip2">请务必如实填写“真实姓名”和“身份证号”，这两个信息必须和身份证上的内容一致。\n购买彩票是个人行为，其保证以上信息是您个人的真实信息，不要使用公司或他人信息。</string>
    <string name="tips_withdraw_tip">请打开微信／支付宝，点击右上角，选择收款，将收款码保存。 \n注意：二维码中请不要设置金额。</string>
    <string name="permission_get_accounts_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_GET_ACCOUNTS</string>
    <string name="permission_read_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_PHONE_STATE</string>
    <string name="permission_call_phone_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CALL_PHONE</string>
    <string name="permission_camera_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_CAMERA</string>
    <string name="permission_access_fine_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_FINE_LOCATION</string>
    <string name="permission_access_coarse_location_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_ACCESS_COARSE_LOCATION</string>
    <string name="permission_read_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_READ_EXTERNAL_STORAGE</string>
    <string name="permission_white_external_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_WRITE_EXTERNAL_STORAGE</string>
    <string name="permission_recode_audio_hint">没有此权限，无法开启这个功能，请开启权限。PERMISSION_RECORD_AUDIO</string>
    <string name="tip_period_timeout">本期购彩已结束，是否购买下一期?</string>
    <string name="tip_good">好的</string>
    <string name="mine_register">账户注册</string>
    <string name="mine_find_psw">找回登录密码</string>
    <string name="set_pay_password">设置支付密码</string>
    <string name="verify_mobile">验证手机号</string>
    <string name="mine_input_username">请输入邮箱地址</string>
    <string name="mine_input_password">请输入密码</string>
    <string name="mine_input_password_again">请再次密码</string>
    <string name="mine_input_password_login">输入登录密码</string>
    <string name="mine_input_old_password">原密码</string>
    <string name="mine_input_new_password">新密码</string>
    <string name="mine_input_new_password_confirm">确认新密码</string>
    <string name="mine_input_password_again_login">确认登录密码</string>
    <string name="mine_input_verify_code">请输入验证码</string>
    <string name="mine_wechat_login">微信登录</string>
    <string name="mine_qq_login">QQ登录</string>
    <string name="mine_forget_password">忘记密码?</string>
    <string name="mine_get_verify_code">获取验证码</string>
    <string name="mine_register_ok">注册成功</string>
    <string name="mine_settings">设置</string>
    <string name="mine_save_center">安全中心</string>
    <string name="mine_account_details">账户明细</string>
    <string name="mine_account_chase">追期管理</string>
    <string name="mine_buy_lottery_history">投注记录</string>
    <string name="mine_user_information">账户信息</string>
    <string name="mine_order_detail">订单详情</string>
    <string name="mine_pay">支付</string>
    <string name="mine_pay_description">玩法说明</string>
    <string name="mine_message_center">消息公告</string>
    <string name="mine_service_center">在线客服</string>
    <string name="mine_about_us">关于我们</string>
    <string name="mine_pay_pwd">支付密码</string>
    <string name="mine_feedback">反馈意见</string>
    <string name="mine_account_info">个人信息</string>
    <string name="mine_visitor">游客模式</string>
    <string name="mine_no_login">未登录</string>
    <string name="mine_no_set">未设置</string>
    <string name="mine_unbind">未绑定</string>
    <string name="mine_email_no_register">该邮箱尚未注册</string>
    <string name="mine_email_or_password_wrong">请输入正确用户名或密码</string>
    <string name="mine_email_or_password_null">用户名或密码不能为空</string>
    <string name="mine_email_cannot_be_use">该邮箱已被注册</string>
    <string name="mine_email_wrong">您输入的邮箱有误,请重新核对后再输入!</string>
    <string name="mine_email_null">邮箱地址不能为空</string>
    <string name="mine_phone_null">手机号不能为空</string>
    <string name="mine_verify_code_null">验证码不能为空</string>
    <string name="mine_verify_code_wrong">请输入正确验证码</string>
    <string name="mine_phone_wrong">请输入正确的手机号</string>
    <string name="mine_password_null">密码不能为空</string>
    <string name="mine_password_confirm_null">确认密码不能为空</string>
    <string name="mine_password_length_wrong">密码应该在6个字符到16个字符之间</string>
    <string name="mine_password_no_same">两次输入的密码不一致</string>
    <string name="mine_password_set_doing">正在设置密码</string>
    <string name="mine_login_ok">登录成功</string>
    <string name="mine_login_auth_fail">授权失败</string>
    <string name="mine_login_cancel">取消登录</string>
    <string name="mine_login_requesting_user_info">正在获取用户信息</string>
    <string name="mine_login_doing">正在登录</string>
    <string name="mine_verify_code_requesting">正在获取验证码</string>
    <string name="mine_verify_code_verifying">正在验证</string>
    <string name="mine_banding">正在绑定</string>
    <string name="mine_band_ok">绑定成功</string>
    <string name="mine_verify_code_send_ok">发送成功</string>
    <string name="mine_verify_code_verify_ok">验证通过</string>
    <string name="mine_money_cash">提现</string>
    <string name="mine_money_recharge">充值</string>
    <string name="mine_service">《用户服务及隐私条款》</string>
    <string name="mine_notice_center">通知中心</string>
    <string name="mine_evaluate">赏个好评</string>
    <string name="mine_voice">声音</string>
    <string name="mine_real_name">真实姓名</string>
    <string name="mine_identity_code">身份证号</string>
    <string name="mine_identity_info">身份信息</string>
    <string name="mine_message">消息</string>
    <string name="mine_update_nickname">修改昵称</string>
    <string name="mine_select_bank_card">选择银行卡</string>
    <string name="mine_login_password">登录密码</string>
    <string name="mine_login_password_update">修改登录密码</string>
    <string name="mine_login_password_set">设置登录密码</string>
    <string name="mine_binding_email">绑定邮箱</string>
    <string name="mine_binding_phone">绑定手机号</string>
    <string name="mine_binding_bank_card">绑定银行卡</string>
    <string name="mine_order_all">全部</string>
    <string name="mine_order_open">已开奖</string>
    <string name="mine_order_not_open">未开奖</string>
    <string name="mine_phase_not_end">追期中</string>
    <string name="mine_phase_end">已结束</string>
    <string name="lottery_manual_add_number">手动加号</string>
    <string name="lottery_machine_add_number">机选加号</string>
    <string name="lottery_order_list">投注单</string>
    <string name="lottery_yuan">元</string>
    <string name="lottery_qi">期</string>
    <string name="lottery_bei">倍</string>
    <string name="lottery_gong">共</string>
    <string name="lottery_zhu">注</string>
    <string name="lottery_danshi">单式</string>
    <string name="lottery_fushi">复式</string>
    <string name="lottery_ball_red">红球</string>
    <string name="lottery_ball_blue">蓝球</string>
    <string name="lottery_touzhu_normal">普通投注</string>
    <string name="lottery_touzhu_dantuo">胆拖投注</string>
    <string name="lottery_type_double_color">双色球</string>
    <string name="lottery_type_fucai_threeD1">福彩3D</string>
    <string name="lottery_type_fucai_threeD2">3D</string>
    <string name="lottery_type_fast_three">快3</string>
    <string name="lottery_type_fast_three_js">江苏快3</string>
    <string name="lottery_type_fast_three_hb">湖北快3</string>
    <string name="lottery_type_fast_three_new">新快3</string>
    <string name="lottery_type_fast_three_easy">易快3</string>
    <string name="lottery_type_always_color_new">新时时彩</string>
    <string name="lottery_type_always_color">重庆时时彩</string>
    <string name="lottery_type_seven_happy">七乐彩</string>
    <string name="lottery_type_a3">排列3</string>
    <string name="select_cash">请选择充值金额</string>
    <string name="wxPay">微信</string>
    <string name="ali_pay">支付宝</string>
    <string name="select_pay_type">请选择支付方式</string>
    <string name="select">选择</string>
    <string name="recharge_instructions">如何充值</string>
    <string name="alipay">支付宝支付</string>
    <string name="wxpay">微信支付</string>
</resources>