<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/color_app_bg"
    tools:context="cn.zcgames.lottery.personal.view.activity.AfterPhaseActivity">

    <include layout="@layout/view_title_bar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/shape_btn_round_corner_red">

        <TextView
            android:id="@+id/afterPhase_tv_all"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/shape_btn_round_corner_red_left"
            android:gravity="center"
            android:text="@string/mine_order_all"
            android:textColor="@color/color_FFFFFF"/>

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_DDDDDD"/>

        <TextView
            android:id="@+id/afterPhase_tv_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/mine_phase_not_end"
            android:textColor="@color/color_999999"/>

        <TextView
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_DDDDDD"/>

        <TextView
            android:id="@+id/afterPhase_tv_done"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/mine_phase_end"
            android:textColor="@color/color_999999"/>

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/afterPhase_viewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
